prusti-tests/tests/verify/ui/ghost-constraints/invalid-trait-refinement-2.stderr
error: [Prusti: verification error] the method's postcondition may not be a valid strengthening of the trait's postcondition.
  --> $DIR/invalid-trait-refinement-2.rs:16:31
   |
16 |       #[refine_spec(where Self: HasContract, [
   |  _______________________________^
17 | |         requires(self.pre()), ensures(self.post())
   | |_________________________________________________^
...
28 |       #[ensures(self.x >= 15)]
   |                 ^^^^^^^^^^^^
   |
   = help: The implemented method's postcondition should imply the trait's postcondition.

error: aborting due to previous error

